[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/PatternSpawner.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 2 )
PatternSpawner = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 576.0
color = Color( 0.0901961, 0.109804, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 4 )]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200, -64 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="PatternSpawnerPosition" type="Position2D" parent="."]
position = Vector2( 0, 576 )

[connection signal="start_game" from="Menu" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
